# GPR-300

./: CMakeLists.txt
assignments/assignment0/: main.cpp
assignments/assignment0/assets/: lit.frag  lit.vert  screen.frag  screen.vert  screenQuad.vert
assignments/assignment1/: CMakeLists.txt  main.cpp
assignments/assignment1/assets/: lit.vert  test.frag  test.vert
assignments/assignment1_post_processing/: CMakeLists.txt  main.cpp
assignments/assignment1_post_processing/assets/: lit_no_normal.frag  lit_no_normal.vert  screen.frag
assignments/assignment1_post_processing/assets/post_processing_effects/: boxBlur.frag  depth.frag  gaussianBlur.frag  screen.frag  screen.vert  tint.frag
assignments/assignment2_shadow_map/: CMakeLists.txt  main.cpp
assignments/assignment2_shadow_map/assets/: lit.frag  lit.vert
assignments/assignment2_shadow_map/assets/post_processing_effects/: tint.frag
assignments/assignment2_shadow_map/assets/shadows/: depth.frag  depth.vert  depthDebug.frag  shadow.frag  shadow.vert
assignments/fk/: CMakeLists.txt  main.cpp
assignments/fk/assets/: unlit.vert  unlit_line.frag
assignments/fk/assets/post_processing_effects/: negative.frag
assignments/fk/assets/shadows/: depthDebug.frag
assignments/keyframe_animation/: CMakeLists.txt  main.cpp
assignments/keyframe_animation/assets/: lit.frag
assignments/keyframe_animation/assets/post_processing_effects/: tint.frag
assignments/keyframe_animation/assets/shadows/: depthDebug.vert
assignments/splines/: CMakeLists.txt  main.cpp
assignments/splines/assets/: lit.vert  unlit.vert
assignments/splines/assets/post_processing_effects/: screen.vert
core/: CMakeLists.txt
core/ew/: mesh.cpp  model.cpp  procGen.cpp  procGen.h  shader.h  texture.h  transform.h
core/jsc/: animation.h  easing.h  framebuffer.h  kinematics.h  light.h  moreProcGen.cpp  moreShaderFuncs.cpp  moreTextureFuncs.cpp  object.h  postProcessEffect.h  postProcessor.h  spline.h
